<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgetPassword"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:onClick="backLogin"
            android:padding="5dp"/>
        <ImageView
            android:id="@+id/main_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/carrental"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:id="@+id/title_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_detail"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/muli_extralight"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_forget"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_extralight"
                android:textColor="@color/black"
                android:inputType="text"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker_forget"
            android:layout_marginTop="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="true"
            app:ccp_showFullName="true"
            android:background="@drawable/black_border"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pgone_number"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:onClick="validatePhone"
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>




    </LinearLayout>


</ScrollView>